node/example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sensitive-ns

---

apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: sensitive-ns
spec:
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: sensitive-ns
spec:
  containers:
  - name: busybox 
    image: busybox
    command:
      - sleep
      - "3600"

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-ns

---

apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: monitoring-ns
spec:
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: monitoring-ns
spec:
  containers:
  - name: busybox 
    image: busybox
    command:
      - sleep
      - "3600"

---

apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: cluster-wide-deny-example
spec:
  priority: 10
  subject:
    namespaces:
      matchLabels:
        kubernetes.io/metadata.name: sensitive-ns
  ingress:
    - action: Pass
      from:
      - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: default
      name: select-all-deny-all
  egress:
    - action: Allow
      to:
      - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: default
      name: select-all-deny-all1

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: sensitive-ns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
