node/policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: security.allow-tcp4
  namespace: default
spec:
  tier: security
  selector: color == 'red'
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: color == 'blue'
      destination:
        ports:
          - 6379
